--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "esbuild": "^0.24.0",
     "framer-motion": "^11.14.4",
     "js-cookie": "^3.0.5",
@@ -27,6 +28,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
+    "validator": "^13.12.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
